samples/_failures_safe/1761430222_cd10c8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_133e01ab.c: In function ‘main’:
./samples/SAFE/__tmp_133e01ab.c:173:14: error: expected ‘)’ at end of input
  173 |         if (k
      |            ~ ^
      |              )
./samples/SAFE/__tmp_133e01ab.c:173:9: error: expected declaration or statement at end of input
  173 |         if (k
      |         ^~
./samples/SAFE/__tmp_133e01ab.c:173:9: error: expected declaration or statement at end of input
